--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^6.0.8",
+    "swiper": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
